# learn-claude-code

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: spec-s07-permissions.md  spec-s08-hooks.md
docs/superpowers/plans/: 2026-04-27-s01-agent-loop.md  2026-04-27-s03-todo-write.md  2026-04-27-s04-subagent.md  2026-04-27-s05-skills.md  2026-04-28-s06-context-compression-revised.md  2026-04-28-s06-context-compression.md
docs/superpowers/specs/: 2026-04-27-s01-agent-loop-design.md  2026-04-27-s02-tool-usage-design.md  2026-04-27-s03-todo-write-design.md  2026-04-27-s04-subagent-design.md  2026-04-27-s05-skills-design.md  2026-04-28-s06-context-compression-design.md
src/: cli.py
src/agent/: agent.py  context.py
src/hooks/: __init__.py  loader.py  runner.py
src/permissions/: __init__.py  constants.py  engine.py  validator.py
src/planning/: __init__.py  todo_manager.py
src/provider/: anthropic_provider.py  base.py
src/tools/: base.py  bash_tool.py  compact_tool.py  file_tools.py  mock_tools.py  skill_registry.py  skill_tool.py  task_tool.py  todo_tool.py
tests/agent/: test_agent.py  test_context.py
tests/hooks/: test_integration.py  test_loader.py  test_runner.py
tests/permissions/: test_engine.py  test_integration.py
tests/planning/: test_todo_manager.py
tests/provider/: test_anthropic_provider.py
tests/tools/: test_base.py  test_bash_tool.py  test_compact_tool.py  test_file_tools.py  test_mock_tools.py  test_skill_registry.py  test_skill_tool.py  test_task_tool.py  test_todo_tool.py
